--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,5 +1,5 @@
-<a class="comments" id="disqus_show">Comments?</a>
-<div id="disqus_thread"></div>
+<a class="comments" id="disqus_show">Comments? Click me.</a>
+<div class="disqus" id="disqus_thread"></div>
 <script type="text/javascript">
 $(document).ready(function() {
     {% if site.safe == false %}var disqus_developer = 1;{% endif %}
