--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ layout: default
 				<h1 class="title">{{ page.title }}</h1>
                	<p class="meta"><time class="date" pubdate="{{ page.date | date_to_utc | date: '%Y-%m-%d' }}">{{ page.date | date_to_string }}</time> By <a href="/contact.html" class="author" title="author">{{ site.author.name }}</a><g:plusone size="small"></g:plusone></p>
                	<p class="description">{{ page.description }}</p>
-				<p class="tags"><a class="tags">{{page.tags}}</a><p>
+				<p class="tags">{% for tag in page.tags %}<a class="tags">{{tag}}</a>{% endfor %}<p>
  			 	{{ content }}
                 <nav class="pagination-link">
                     {% if page.previous %}
