--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,8 @@
 </head>
 <body>
     <script src="{{ site.static.jquery }}"></script>
+	{% include googleanalytics.html %}
+	{% include baiduanalytics.html %}
     {% include head.html %} 
   <section id="content">
     <article id="contenter">
