--- a/_includes/bg-search.html
+++ b/_includes/bg-search.html
@@ -9,7 +9,7 @@
 <script type="text/javascript">
 $(document).ready(function() {
 	var autoNode = $("#auto");     
-	var wordInput = $("#bg_go"); 
+	var wordInput = $("#bg_search"); 
 	var highlightindex = -1;     
 	var timeoutId;     
 	var wordInputOffset = wordInput.offset();     
@@ -52,7 +52,7 @@ $(document).ready(function() {
 							newDivNode.click(function() {     
 								autoNode.hide();     
 								highlightindex = -1;     
-								$("#bg_go").val(wordNode);});     
+								$("#bg_search").val(wordNode);});     
 							flag=true;
 						}
 						i++;
@@ -74,8 +74,8 @@ $(document).ready(function() {
 	}     
 	});     
 	$("#btn_go").click(function() {
-		if($("#bg_go").val()!="") {
-			var wordText = $("#bg_go").val();
+		if($("#bg_search").val()!="") {
+			var wordText = $("#bg_search").val();
 			window.location.href=feed[wordText];
 		}
 	});
