add post outlinks

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -53,6 +53,7 @@ layout: nil
 		<div class="aside fn-clear">
 			{% include bg-search.html %}
 			{% include bg-classification.html %}
+			{% include bg-outlinks.html %}
 			{% include bg-other.html %}
 		</div>
 	</div>
