--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,6 +21,7 @@ layout: nil
   <meta name="description" content="{{ site.description }}" />
   <link rel="shortcut icon" href="/images/favicon.ico"/>
   <link rel="stylesheet" href="{{ site.static.css }}" type="text/css" />
+  <link rel="stylesheet" href="{{ site.static.css_pygments }}" type="text/css" />
   <link rel="alternate" type="application/atom+xml" title="Recent Entries" href="{{ site.feed }}" />
 	{% include googleanalytics.html %}
 	{% include mathjax.html %}
