--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,7 @@
   <meta name="description" content="{{ site.description }}" />
   <link rel="shortcut icon" href="/images/favicon.ico"/>
   <link rel="stylesheet" href="{{ site.static.css }}" type="text/css" />
+  <link rel="stylesheet" href="{{ site.static.css_pygments }}" type="text/css" />
   <link rel="alternate" type="application/atom+xml" title="Recent Entries" href="{{ site.feed }}" />
 	{% include googleanalytics.html %}
 </head>
