--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ body                        { background: url(/images/body-bg3.jpg) repeat 0 0; 
 .content-cnt .main-excerpt .date 
                             { font-style: italic; color: #fff; }
 .content-cnt .main-excerpt-title 
-                            { margin: 16px; font-size: 26px; font-family: UbuntuMono-B, consolas, monaco, monospace; text-transform: uppercase; text-shadow: 1px 1px #FFFFFF; }
+                            { margin: 16px; font-size: 26px; text-transform: uppercase; text-shadow: 1px 1px #FFFFFF; }
 .content-cnt .main-excerpt p 
                             { margin: 16px; font-size:  14px; margin-bottom: 10px; font-family: Georgia; color: #eee; }
 .content-cnt .main-excerpt p a                    
