--- a/_includes/bg-outlinks.html
+++ b/_includes/bg-outlinks.html
@@ -1,6 +1,7 @@
 <div class="box fn-clear">
 	<h4 class="title">OutLinks</h4>
 	<ul>
-		<li><a href="http://ddmbr.com">ddmbr.com</a></li>
+		<li><a href="http://ddmbr.com">ddmbr.com(杨帆)</a></li>
+		<li><a href="http://www.dreamingo.com/">dreamingo.com(展明)</a></li>
 	</ul>
 </div>
