--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ body .fn-hide               { display:none; }
 /*--------------------------------------------
                 default
 --------------------------------------------*/
-body                        { background: url(/images/body-bg3.jpg) repeat 0 0; }
+body                        { background: url(/images/body-bg5.png) repeat 0 0; }
 ::selection                 { background:#292929; color:#ffffff; text-shadow:none !important; }
 *::-moz-selection           { background: none repeat scroll 0 0 #292929; color: #FFFFFF; }
 
