--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,6 +1,10 @@
 <footer class="foot">
 	<div class="foot-cnt fn-clear">
 		<div class="foot-cnt-det fn-clear">
+			<article class="blogroll">
+				<h4 class="title">About Blog</h4>
+				<p>{{ site.about_blog }}</p>
+			</article>
 			<article class="about">
 				<h4 class="title">About Me</h4>
 				<p>{{ site.about }}</p>
@@ -18,7 +22,7 @@
 	<div class="foot-btn">
 		<div class="foot-btn-det">
 			<p class="copyright">Copyright © 2013 Legend Lee All rights reserved.</p>
-			<p class="author">Powered by <a href="http://www.jekyllrb.com">Jekyll</a>. Modified and Used by <a href="http://legendlee1314.gitbug.com">Legend</a></p>
+			<p class="author">Powered by <a href="http://www.jekyllrb.com">Jekyll</a>. Designed by <a href="http://www.pizn.me">PIZn</a>. Modified and Used by <a href="http://legendlee1314.gitbug.com">Legend</a></p>
 		</div>
 	</div>
 </footer>
