--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -5,6 +5,7 @@ $(document).ready(function() {
     {% if site.safe == false %}var disqus_developer = 1;{% endif %}
     var disqus_shortname = '{{ site.disqus.short_name }}'; // required: replace example with your forum shortname
 	$("#disqus_show").click(function() {
+        $("#disqus_show").hide();
     	/* * * DON'T EDIT BELOW THIS LINE * * */
         var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
         dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
