--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,7 @@
 					<li><a href="/" >Home</a></li>
 					<li><a href="/archives.html" >Archives</a></li>
 					<li><a href="/tags.html" >Tags</a></li>
+					<li><a href="/outlinks.html" >OutLinks</a></li>
 					<li><a href="/contact.html" >About & Contact</a></li>
 				</ul>
 			</nav>
