--- a/css/style.css
+++ b/css/style.css
@@ -211,9 +211,9 @@ body                        { background: url(/images/body-bg5.png) repeat 0 0; 
 .entry em                   { font-size: 14px; font-style: italic; color: #eee; }
 .entry strong               { color: #FFD700; font-size: 16px; font-weight: 700; }
 .entry a                    { border-bottom: 1px dotted #686868; color: #EE7600; }
-.entry a:hover              { background: #e8e8e8; border-bottom: 1px solid #777; text-decoration: none; }
+.entry a:hover              { border-bottom: 1px solid #777; text-decoration: none; }
 .entry pre                  { background-color: #303030; border-left: 5px solid #1f1f1f; border-top: 1px solid #1f1f1f; border-right: 1px solid #1f1f1f; border-bottom: 1px solid #1f1f1f; font: 12px/1.5 Monaco,serif; margin: 10px 0 10px 0px; overflow:  auto; color: #eee; border-radius: 3px 3px 3px 3px; }
-.entry code                	{ font: 12px Comic Sans MS,serif; border-radius: 2px 2px; }
+.entry code                	{ background: #e8e8e8; font: 12px Comic Sans MS,serif; border-radius: 2px 2px; }
 
 /** entry special **/
 .entry .title               { margin-bottom: 10px; font-family: Georgia; padding: 0 0; font-size: 32px; font-weight: 400; line-height: 32px; color: #eee; text-align: center; text-shadow: 1px 1px #FFFFFF; text-transform: uppercase; }
