--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,4 +27,7 @@
     <meta property="og:url" content="{{ site.url }}{{ page.url }}">
     <meta property="og:site_name" content="{{ site.title }}">
 
+    <!-- Javascripts -->
+    <script type="text/javascript" src="{{ "/js/jquery.min.js" | prepend: site.baseurl }}"/></script>
+
 </head>
